some api request tests that don't work

--- a/popup.css
+++ b/popup.css
@@ -13,13 +13,13 @@ a.button3{
     text-decoration:none;
     font-family:'Roboto',sans-serif;
     font-weight:300;
-    color:#FFFFFF;
-    background-color:#4eb5f1;
+    color:#FBFFFF;
+    background-color:#31AEF3;
     text-align:center;
     transition: all 0.2s;
 }
 a.button3:hover{
-    background-color:#4095c6;
+    background-color:#2FA6E8;
     cursor: pointer;
 }
 @media all and (max-width:30em){
